app/css/directives/map.less
//
// Copyright 2015 Next Century Corporation
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

.map-container {
    height: @widget-height;
    width: @widget-width;
    min-height: 100px;

    .alert {
        display: none;
        padding: 6px;
        margin-top: 3px;
    }

    .alert-danger {
        background: none;
        border-color: @error-color;
        color: @error-color;
    }

    .legend-item {
        background-color: @light-background;
        border: @border;
        border-radius: 5px;
        color: @mid-text-color;
        font-size: 14px;
        margin-top: 0px;
        margin-right: 2px;
        opacity: .8;
        padding: 3px;
    }

    .chart-options {
        .popover {
            top: 30px;
            right: -10px;
            position: absolute;
            width: 250px;
        }
    }

    .footer-container {
        position: absolute;
        bottom: 10px;
        left: 10px;
        z-index: 1000;
        pointer-events: none;
    }

    .header-container {
        position: absolute;
        z-index: 1005;

        &.name-container {
            left: 10px;
            top: 10px;
        }

        &.menu-container {
            right: 10px;
            top: 10px;
            z-index: 1010;

            /* Give the menu container a background to make it more readable.  Make it the same height (30 px) and color of the filter reset notifications. */
            div.chart-options a {
                background-color: @button-color;
                border-style: solid;
                border-width: 1px;
                border-color: @button-border-color;
                border-radius: 4px;
                padding: 5px 5px 2px;
            }
        }

        &.legend-container {
            top: 40px;
            left: 10px;
        }

        &.filter-container {
            top: 40px;
            right: 10px;
        }
    }

    .olMap {
        background-color: #b5d0d0;
        border: @border;
        border-radius: 0 0 4px 4px;
        width: auto !important;
        height: 100% !important;
        position: static;
        margin: 0px !important;
    }

    .olPopup {
        font-size: 12px;
        z-index: 1060;

        table {
            margin: 2px;
        }

        td, th {
            padding: 2px;
        }
    }

    .olControlAttribution {
        bottom: 0;
        color: @main-text-color;
        text-shadow: 0 1px 0 @text-shadow-color;
    }

    .olControlZoom {
        top: 40px;
        left: 10px;

        a {
            background-color: @accent-bright;
            opacity: .7;
            font-size: 20px;
            font-family: "Open Sans", Helvetica, arial, sans-serif;
            line-height: 24px;

            &:hover{
                background-color: @accent-bright;
                opacity: 1;
            }
        }
    }

    .olControlLayerSwitcher {
        top: 90px;
        left: 5px;
        border: @border; 
        color: black;
        
        .dataLbl {
            font-size: 18px;
        }

        .baseLbl {
            font-size: 18px;
        }

        .labelSpan {
            font-size: 16px;
            color: black;
        }

        .layersDiv {
            padding-left: 30px;
            background-color: rgba(225, 225, 225, 0.7);
        }

        .minimizeDiv {
            left: 0px;
            height: 40px;
            width: 30px;
            background-color: darkblue;
            border-radius: 0px 15px 15px 0px;
            border: @border; 
        }

        .maximizeDiv {
            left: 0px;
            height: 40px;
            width: 30px;
            background-color: darkblue;
            border-radius: 0px 15px 15px 0px;
            border: @border;
        }

        .olAlphaImg {
            position: absolute !important;
            left: 6px;
            top: 10px;
        }

        input[type=radio] {
            margin: 4px;
        }

        input[type=checkbox] {
            margin: 4px;
        }

        label {
            margin: 0px;
        }
    }
}

.visualization-widget-mobile {
    .map-container {
        .olMap {
            height: @mobile-widget-height !important;
        }
    }
}

